# duolingo-profile-progress

./: .env  .env.example  .gitignore  README.md  com.duolingo.familyleague.plist.example  daily_report_20250806.txt  daily_report_20250807.txt  duolingo_cron.sh  duolingo_family_league.py  duolingo_wrapper.sh  family_league_config.json.example  index.html  pyproject.toml  setup.sh  test.py
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  duolingo-tracker.yml
daily/: 20260111.html  20260113.html  20260114.html  20260115.html  20260116.html  20260117.html  20260118.html  20260120.html  20260121.html  20260122.html  20260123.html  20260124.html  20260125.html  20260127.html  20260128.html  20260129.html  20260130.html  20260131.html
league_data/: daily_2025-08-06.json  daily_2025-08-07.json  league_history.json
src/: config.py  data_storage.py  duolingo_api.py  email_sender.py  gist_storage.py  html_report_generator.py  html_templates.py  i18n.py  migrate_storage.py  report_generator.py  sqlite_storage.py  storage_factory.py  storage_interface.py  types.py
tests/: test_family_league.py  test_gist_storage.py  test_html_reports.py  test_sqlite_storage.py  test_weekly_xp.py
translations/: en.json  hu.json
weekly/: 20260112.html  20260119.html  20260126.html
