[project]
name = "duolingo-family-league"
version = "0.1.0"
description = "Track Duolingo language learning progress for families"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["requests>=2.31.0", "python-dotenv>=1.0.0"]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.403",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.12.8",
    "ty>=0.0.1a17",
]

[project.scripts]
duolingo-family-league = "duolingo_family_league:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pyright]
# Pyright configuration with strict settings
include = ["src"]
exclude = ["**/__pycache__", "dist"]
stubPath = "stubs"
venvPath = "."
venv = ".venv"
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportUnknownMemberType = true
reportUnknownParameterType = true
reportUnknownVariableType = true
reportUnknownArgumentType = true
reportPrivateImportUsage = true
reportUntypedFunctionDecorator = true
reportFunctionMemberAccess = true
reportIncompatibleMethodOverride = true

[tool.ruff]
target-version = "py312"
